MCKIN-10995 - fixed the issue of drop object overlapped with navigation arrows.

--- a/lms/static/sass/xblocks/drag_and_drop.scss
+++ b/lms/static/sass/xblocks/drag_and_drop.scss
@@ -306,6 +306,7 @@ body.new-theme {
                         .option {
                             background-color: $gray;
                             box-shadow: none;
+                            
                         }
                     }
 
@@ -624,4 +625,11 @@ body.new-theme {
             }
         }
     }
+
+    .item-wrapper{
+        .option{
+           width: 100% !important;
+        }
+    }
+    
 }
